@@ -167,3 +167,4 @@ Changes between KWord-1.2-beta1 and KWord-1.2-beta2
 - Now we can configure which type of formatting char we want to display
 - Now we can configure footnote line separator
 - Add support to insert Native file 
+- Import frame/table style from file
